--- a/src/scss/content_script/separator.scss
+++ b/src/scss/content_script/separator.scss
@@ -5,7 +5,8 @@
     color: $black;
     font-size: $font_size;
 
-    &.all {
+    &.all,
+    &.search_by_img {
         margin-bottom: $search_result_offset_all;
     }
 
